cambios en mb21002

--- a/mb21002/Implementacion-Angular.html
+++ b/mb21002/Implementacion-Angular.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Servicios</title>
-    <link rel="stylesheet" href="css/estilos.css">
+    <title>Página Principal</title>
+    <link rel="stylesheet" href="estilos/estilos.css">
 </head>
 <body>
     <header>
@@ -21,8 +21,7 @@
     </header>
     <main>
         <h1>Implementacion</h1>
-        <p>Ofrecemos una variedad de servicios para el desarrollo de aplicaciones web.</p>
-        <img src="img/servicio1.jpg" alt="Servicio 1">
+        <p>Casos de EXITO</p>
     </main>
     <footer>
         <p>© 2024 Nuestra Empresa</p>
