--- a/mb21002/Angular-Ventajas.html
+++ b/mb21002/Angular-Ventajas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiénes Somos</title>
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="estilos/estilos.css">
 </head>
 <body>
     <header>
