--- a/mb21002/servicios.html
+++ b/mb21002/servicios.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Principal</title>
-    <link rel="stylesheet" href="estilos/estilos.css">
+    <link rel="stylesheet" href="../mb21002/estilos/estilos.css">
 </head>
 <body>
     <header>
         <nav class="navbar">
-            <img src="img/logo.png" alt="Logo de la Empresa" class="logo">
+            <img src="../mb21002//img/logo.png" alt="Logo de la Empresa" class="logo">
             <ul class="nav-links">
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="Angular-Ventajas.html">ventajas de angular</a></li>
