--- a/GH22026/about.html
+++ b/GH22026/about.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="features.html">Features</a></li>
                 <li><a href="community.html">Community</a></li>
