--- a/mb21002/Angular-Ventajas.html
+++ b/mb21002/Angular-Ventajas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiénes Somos</title>
+    <title>Ventajas</title>
     <link rel="stylesheet" href="../mb21002/estilos/estilos.css">
 </head>
 <body>
@@ -14,17 +14,57 @@
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="Angular-Ventajas.html">ventajas de angular</a></li>
                 <li><a href="Implementacion-Angular.html">Implementacion</a></li>
-                <li><a href="servicios.html">Servicios de angular</a></li>
-                <li><a href="Casos-exito.html">Casos de exito</a></li>
+                <li><a href="servicios.html">Glosario angular</a></li>
             </ul>
         </nav>
     </header>
-    <main>
+
+    <main class="ventajas">
         <h1>Ventajas angular</h1>
-        <p>Somos una empresa dedicada al desarrollo de aplicaciones web.</p>
+        <hr>
+        <div class="feature-row">
+            <div>
+                <div class="textline1">multiplataforma</div>
+                <img src="../mb21002/img/feature-icon.svg" height="70px" alt="icoSvg">
+            </div>
+            <div class="row1">
+                <div class="col1">
+                    <div style="margin-bottom: 9px; font-size: 18px; font-weight: bold;">Aplicaciones Web Progresivas</div>
+                    <p style="text-align: left;">Utiliza las capacidades modernas de la plataforma web para ofrecer experiencias similares a las de las aplicaciones. Instalación de alto rendimiento, sin conexión y en cero pasos.</p>
+                </div>
+                <div class="col3">
+                    <div style="margin-bottom: 9px; font-size: 18px; font-weight: bold;">Nativo</div>
+                    <p style="text-align: left;">Crea aplicaciones móviles nativas con estrategias de Cordova, Ionic o NativeScript.</p>
+                </div>
+                <div class="col2">
+                    <div style="margin-bottom: 9px; font-size: 18px; font-weight: bold;">Escritorio</div>
+                    <p style="text-align: left;">Crea aplicaciones instaladas en el escritorio en Mac, Windows y Linux con los mismos métodos Angular que has aprendido para la web, además de la capacidad de acceder a las APIs nativas del sistema operativo.</p>
+                </div>
+            </div>
+            
+            <div>
+                <div class="textline1">Velocidad y Rendimiento</div>
+                <img src="../mb21002/img/feature-icon.svg" height="70px" alt="icoSvg">
+            </div>
+            <div class="row1">
+                <div class="col1">
+                    <div style="margin-bottom: 9px; font-size: 18px; font-weight: bold;">Generación de código</div>
+                    <p style="text-align: left;">Angular convierte sus plantillas en código altamente optimizado para las máquinas virtuales JavaScript de hoy en día, lo que le ofrece todas las ventajas del código escrito a mano con la productividad de un framework.</p>
+                </div>
+                <div class="col3">
+                    <div style="margin-bottom: 9px; font-size: 18px; font-weight: bold;">Universal</div>
+                    <p style="text-align: left;">Sirve la primera vista de tu aplicación en Node.js®, .NET, PHP y otros servidores para una representación casi instantánea en HTML y CSS. También allana el camino para sitios que optimizan para SEO.</p>
+                </div>
+                <div class="col2">
+                    <div style="margin-bottom: 9px; font-size: 18px; font-weight: bold;">División de código</div>
+                    <p style="text-align: left;">Las aplicaciones de Angular se cargan rápidamente con el nuevo enrutador de componentes, que ofrece división automática de código para que los usuarios solo carguen el código necesario para representar la vista que solicitan.</p>
+                </div>
+            </div>
+        </div>
     </main>
+
     <footer>
-        <p>© 2024 Nuestra Empresa</p>
+        <p>© 2024 Proyecto ues</p>
     </footer>
     <script src="js/scripts.js"></script>
 </body>
