--- a/mb21002/Casos-exito.html
+++ b/mb21002/Casos-exito.html
@@ -15,7 +15,7 @@
                 <li><a href="Angular-Ventajas.html">ventajas de angular</a></li>
                 <li><a href="Implementacion-Angular.html">Implementacion</a></li>
                 <li><a href="servicios.html">Servicios de angular</a></li>
-                <li><a href="Casos-exito.html">Casos de exito</a></li>
+                <li><a href="Casos-exito.html">Glosario angular</a></li>
             </ul>
         </nav>
     </header>
