actualizacion de urls

--- a/RN22001/index.html
+++ b/RN22001/index.html
@@ -12,8 +12,8 @@
     <!-- Navegación -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">
-                <img src="images/vscode-logo.png" alt="Logo VS Code" width="30" height="30" class="d-inline-block align-text-top">
+            <a class="navbar-brand" href="./index.html">
+                <img src="./images/vscode-logo.png" alt="Logo VS Code" width="30" height="30" class="d-inline-block align-text-top">
                 VS Code
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,22 +22,22 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                        <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="sections/introduccion.html">Introducción</a>
+                        <a class="nav-link" href="./sections/introduccion.html">Introducción</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="sections/configuracion.html">Configuración</a>
+                        <a class="nav-link" href="./sections/configuracion.html">Configuración</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="sections/extensiones.html">Extensiones</a>
+                        <a class="nav-link" href="./sections/extensiones.html">Extensiones</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="sections/atajos.html">Atajos</a>
+                        <a class="nav-link" href="./sections/atajos.html">Atajos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="sections/referencias.html">Referencias</a>
+                        <a class="nav-link" href="./sections/referencias.html">Referencias</a>
                     </li>
                 </ul>
             </div>
@@ -59,17 +59,17 @@
                 Earum ea nobis adipisci repellendus beatae, minima, saepe ratione facere sapiente aperiam voluptate, minus omnis debitis voluptas temporibus eaque delectus neque nostrum nulla! Libero quas ipsum soluta alias magnam accusamus?
                 Cupiditate laudantium aliquid, dicta debitis voluptatum deserunt nisi ab tempore quis officia accusantium! Doloremque sint qui autem ex, odit in adipisci molestias impedit, voluptatem nobis nam, obcaecati quo vitae vero.
                </p>
-            <a class="btn btn-primary btn-lg" href="sections/introduccion.html" role="button">Comenzar</a>
+            <a class="btn btn-primary btn-lg" href="./sections/introduccion.html" role="button">Comenzar</a>
            
         </div>
     </div>
 
     <!-- Pie de página -->
     <footer class="bg-dark text-white text-center py-3">
-        <p>&copy; RN22001 - 2024 Mi Sitio sobre VS Code | <a href="sections/referencias.html" class="text-white">Referencias</a></p>
+        <p>&copy; RN22001 - 2024 Mi Sitio sobre VS Code | <a href="./sections/referencias.html" class="text-white">Referencias</a></p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
