--- a/RN22001/sections/atajos.html
+++ b/RN22001/sections/atajos.html
@@ -25,19 +25,19 @@
                         <a class="nav-link" href="../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " aria-current="page" href="introduccion.html">Introducción</a>
+                        <a class="nav-link " aria-current="page" href="./introduccion.html">Introducción</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="configuracion.html">Configuración</a>
+                        <a class="nav-link" href="./configuracion.html">Configuración</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="extensiones.html">Extensiones</a>
+                        <a class="nav-link" href="./extensiones.html">Extensiones</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="atajos.html">Atajos</a>
+                        <a class="nav-link active" href="./atajos.html">Atajos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="referencias.html">Referencias</a>
+                        <a class="nav-link" href="./referencias.html">Referencias</a>
                     </li>
                 </ul>
             </div>
