--- a/MC22010/about.html
+++ b/MC22010/about.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>¿Qué es CSS?</title>
+    <link rel="icon" href="https://res.cloudinary.com/dqo8icjui/image/upload/v1724568695/css_ezbwch.svg" type="css-icon">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header>
-        <h1>Guía de CSS</h1>
+        <h1>CSS</h1>
         <nav>
             <ul>
                 <li><a href="./index.html">Inicio</a></li>
@@ -21,8 +22,11 @@
     </header>
     <main class="main">
         <h2>¿Qué es CSS?</h2>
-        <p>CSS, o Hojas de Estilo en Cascada, es un lenguaje de hojas de estilo usado para describir la presentación de un documento escrito en HTML o XML.</p>
-        <img src="./img/inicioCSS.png" alt="css" class="responsive-image">
+            <p>Un concepto clave es que una página web es realmente un documento de texto. En dicho documento se escribe
+             código HTML, con el que se que crea el contenido de una web. <br> Por otro lado, existe el código CSS, que 
+             unido al código HTML permite darle forma, color, posición (y otras características visuales) 
+             a un documento web.</p>
+        <img src="./img/que-es-css.png" alt="css" class="responsive-image">
     
     </main>
     <footer>
