--- a/MC22010/properties.html
+++ b/MC22010/properties.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Propiedades y Layout</title>
+    <link rel="icon" href="https://res.cloudinary.com/dqo8icjui/image/upload/v1724568695/css_ezbwch.svg" type="css-icon">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header>
-        <h1>Guía de CSS</h1>
+        <h1>CSS</h1>
         <nav>
             <ul>
                 <li><a href="./index.html">Inicio</a></li>
@@ -28,6 +29,11 @@
             <li><strong>margin:</strong> Define el margen exterior de un elemento.</li>
             <li><strong>padding:</strong> Define el espacio interior entre el contenido y el borde.</li>
         </ul>
+
+        <div>
+            <img src="./img/estilizacion-css.jpg" alt="propiedades css" class="responsive-image">
+        </div>
+       
     </main>
     <footer>
         <p>&copy; 2024 CSS MC22010</p>
