--- a/MC22010/Index.html
+++ b/MC22010/Index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio CSS</title>
+    <link rel="icon" href="https://res.cloudinary.com/dqo8icjui/image/upload/v1724568695/css_ezbwch.svg" type="css-icon">
+
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header>
-        <h1>Guía de CSS</h1>
+        <h1>CSS</h1>
         <nav>
             <ul>
                 <li><a href="./index.html">Inicio</a></li>
@@ -22,7 +24,7 @@
     <main class="main">
         <h2>Bienvenido a la Guía de CSS</h2>
         <p>Explora las secciones para aprender sobre CSS, desde la sintaxis básica hasta el diseño responsivo.</p>
-        <img src="https://res.cloudinary.com/dqo8icjui/image/upload/v1724568695/css_ezbwch.svg" alt="css inicio" class="responsive-image">
+        <img src="./img/inicioCSS.png" alt="css inicio" class="responsive-image">
     </main>
     <footer>
         <p>&copy; 2024 CSS MC22010</p>
