--- a/MC22010/responsive.html
+++ b/MC22010/responsive.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diseño Responsivo</title>
+    <link rel="icon" href="https://res.cloudinary.com/dqo8icjui/image/upload/v1724568695/css_ezbwch.svg" type="css-icon">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header>
-        <h1>Guía de CSS</h1>
+        <h1>CSS</h1>
         <nav>
             <ul>
                 <li><a href="./index.html">Inicio</a></li>
