--- a/mm22108/sub-pages/intro.html
+++ b/mm22108/sub-pages/intro.html
@@ -3,20 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Introducción - TPI115</title>
+    <title>Introducción - Investigación</title>
     <link rel="stylesheet" href="../styles/styles.css">
 </head>
 <body>
     <header>
-        <h1>Introducción a Lenguajes y Herramientas para Internet</h1>
+        <h1>Introducción a la Investigación</h1>
+        <p class="subtitle">TPI115 2024</p>
     </header>
 
     <main>
-        <p>Iniciaremos con los lenguajes básicos como HTML, CSS y JavaScript, y avanzaremos hacia tecnologías más complejas como frameworks y servidores.</p>
+        <section>
+            <h2>Resumen General</h2>
+            <p>En el marco de esta investigación, se explorarán las tecnologías más relevantes en el desarrollo web moderno. A través de un enfoque en el frontend y backend, esta investigación busca entender cómo las herramientas actuales permiten crear aplicaciones robustas, escalables y accesibles para un amplio público.</p>
+        </section>
+
+        <section>
+            <h2>Objetivos de la Investigación</h2>
+            <p>El principal objetivo de este estudio es analizar las tecnologías que están transformando el desarrollo web y cómo estas pueden aplicarse en proyectos futuros. Adicionalmente, se busca evaluar la efectividad de diferentes entornos de desarrollo (IDEs) en términos de productividad y eficiencia.</p>
+        </section>
+
+        <section class="back-button">
+            <a href="../index.html" class="button">Regresar al Inicio</a>
+        </section>
     </main>
 
     <footer>
-        <p>Camilo Medrano</p><p>MM22108</p>
+        <p>Camilo Medrano</p>
+        <p>MM22108</p>
     </footer>
 </body>
 </html>
