actualizacion sitio web

--- a/RN22001/sections/configuracion.html
+++ b/RN22001/sections/configuracion.html
@@ -46,21 +46,29 @@
 
     <!-- Contenido de la Sección -->
     <div class="container mt-4">
-        <h1>Configuracion de VS Code</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt esse consectetur inventore corrupti necessitatibus,
-             reiciendis dolorem quasi architecto aut repudiandae ratione doloremque ipsam 
-            porro atque magni commodi repellat cumque tempore!</p>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis velit eveniet dignissimos fugiat id nemo dolorem sunt voluptas, hic, ipsam eum maiores ut reiciendis obcaecati dolor voluptatem illum quia saepe.
-            Omnis nihil vero similique laboriosam quaerat numquam perspiciatis blanditiis non odio pariatur magnam, repellat natus officiis eaque aperiam consequatur ratione nostrum. Unde voluptate error sequi praesentium iste excepturi, id quibusdam.
-            Cum porro neque eligendi expedita iure adipisci, fuga ullam veniam officia. Temporibus eveniet quas quisquam voluptatum eum porro molestias, ipsa ipsam corrupti qui consequatur distinctio adipisci aut veniam numquam tempore?
-            Possimus dolorum porro esse accusamus quaerat fugit temporibus suscipit minus, nostrum laudantium voluptate asperiores cumque saepe blanditiis eius pariatur architecto dignissimos aspernatur repudiandae. Voluptas possimus accusantium in incidunt quidem eum.
-        </p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam quas, et optio architecto sed vero quasi aliquid quis. Facere asperiores sit impedit fugiat assumenda tempora id facilis soluta dolorum quae.
-        Consequatur harum, modi laborum consequuntur ratione quo repellat quos dolor blanditiis recusandae corrupti inventore odit cum ipsum tenetur culpa similique vero, eaque, iure facere deleniti suscipit nihil beatae! Officia, excepturi!
-        Recusandae vel magni pariatur exercitationem ipsam mollitia, perspiciatis blanditiis autem nesciunt amet atque, eligendi nemo consequatur, consectetur dolorum! Ipsa a adipisci cupiditate laborum placeat vero unde tempora? Nesciunt, magni harum?
-        Quis, rerum praesentium perspiciatis fugiat nemo aperiam neque delectus! Doloribus officia dignissimos et? Assumenda ab reprehenderit voluptates consequuntur error, eum recusandae voluptatibus impedit laboriosam aperiam, maiores dolorem culpa? Temporibus, mollitia.
-        Repudiandae corrupti autem laudantium id aliquid dicta perspiciatis ipsam expedita rem officiis, iusto quas cupiditate! Explicabo tempore, rem obcaecati ullam eius veritatis excepturi id odit dignissimos, quia omnis odio delectus.</p>
+        <h1>Configuración de Visual Studio Code</h1>
+        <p>Visual Studio Code permite una personalización extensa para adaptarse a tus necesidades y preferencias. Aquí te mostramos cómo configurar VS Code para mejorar tu flujo de trabajo.</p>
+
+        <h2>Temas y Apariencia</h2>
+        <p>La apariencia de VS Code se puede personalizar cambiando el tema. Puedes elegir entre una variedad de temas predefinidos o instalar nuevos temas desde el Marketplace.</p>
+        <ul>
+            <li><strong>Cambiar Tema:</strong> Ve a <strong>Archivo > Preferencias > Tema de Color</strong> y selecciona el tema que prefieras.</li>
+            <li><strong>Instalar Nuevos Temas:</strong> Abre la paleta de comandos (Ctrl+Shift+P) y busca <strong>Extensiones: Buscar extensiones</strong>. Luego, busca e instala temas desde el Marketplace.</li>
+        </ul>
+
+        <h2>Atajos de Teclado Personalizados</h2>
+        <p>VS Code permite personalizar los atajos de teclado para adaptarse a tu estilo de trabajo. Puedes añadir o modificar atajos a través del archivo de configuración.</p>
+        <ul>
+            <li><strong>Acceder a Atajos:</strong> Ve a <strong>Archivo > Preferencias > Métodos abreviados de teclado</strong>.</li>
+            <li><strong>Modificar Atajos:</strong> Busca el atajo que deseas modificar y haz clic en el icono de lápiz para asignar una nueva combinación de teclas.</li>
+        </ul>
+
+        <h2>Configuración de Extensiones</h2>
+        <p>Las extensiones pueden añadir funcionalidades adicionales a VS Code. Puedes configurar cada extensión según tus necesidades específicas.</p>
+        <ul>
+            <li><strong>Configurar Extensiones:</strong> Ve a <strong>Extensiones (Ctrl+Shift+X)</strong>, selecciona una extensión instalada y haz clic en el icono de engranaje para acceder a las opciones de configuración.</li>
+            <li><strong>Administrar Extensiones:</strong> Puedes deshabilitar o desinstalar extensiones desde el mismo menú.</li>
+        </ul>
     </div>
 
     <!-- Pie de página -->
