--- a/RN22001/sections/extensiones.html
+++ b/RN22001/sections/extensiones.html
@@ -46,28 +46,37 @@
 
     <!-- Contenido de la Sección -->
     <div class="container mt-4">
-        <h1>Extensiones de VS Code</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis cum, officia possimus quasi perspiciatis minus asperiores rerum sint deleniti molestiae repudiandae quam labore, magnam, doloremque unde. Necessitatibus, a pariatur! Ad?
-        Nemo numquam esse libero. Architecto vel veniam excepturi error ducimus accusamus ratione ad unde corrupti consectetur porro, earum placeat iure nihil officia non repellat velit exercitationem rerum possimus aliquam suscipit.
-    </p>
-    <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia rem mollitia reiciendis temporibus ipsum aspernatur delectus perspiciatis, exercitationem assumenda animi consequuntur dolorum nobis autem ex ullam dolore quae quod quaerat.
-        Doloremque officiis architecto porro laborum, aut, expedita id accusamus beatae soluta eveniet et. Commodi aliquam nulla labore doloribus animi iure velit, enim placeat maxime, incidunt beatae! Ipsum doloribus culpa nemo.
-        Alias repellendus officia ducimus. Vitae omnis, quisquam reiciendis sint illum, repellat corporis dolores voluptatibus voluptatem cumque molestias ipsam unde consequuntur culpa accusamus, rerum magni. Vitae enim consectetur asperiores distinctio corporis?
-        Magni accusamus vel maiores voluptates quasi, quos nesciunt facere error dolorum vitae sint ratione eius. Id, voluptas! Quos cum quasi ipsam, quis, dolorum sint voluptatibus, explicabo et debitis vero ut?
-    </p>
-    <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia rem mollitia reiciendis temporibus ipsum aspernatur delectus perspiciatis, exercitationem assumenda animi consequuntur dolorum nobis autem ex ullam dolore quae quod quaerat.
-        Doloremque officiis architecto porro laborum, aut, expedita id accusamus beatae soluta eveniet et. Commodi aliquam nulla labore doloribus animi iure velit, enim placeat maxime, incidunt beatae! Ipsum doloribus culpa nemo.
-        Alias repellendus officia ducimus. Vitae omnis, quisquam reiciendis sint illum, repellat corporis dolores voluptatibus voluptatem cumque molestias ipsam unde consequuntur culpa accusamus, rerum magni. Vitae enim consectetur asperiores distinctio corporis?
-        Magni accusamus vel maiores voluptates quasi, quos nesciunt facere error dolorum vitae sint ratione eius. Id, voluptas! Quos cum quasi ipsam, quis, dolorum sint voluptatibus, explicabo et debitis vero ut?
-    </p>
-    <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia rem mollitia reiciendis temporibus ipsum aspernatur delectus perspiciatis, exercitationem assumenda animi consequuntur dolorum nobis autem ex ullam dolore quae quod quaerat.
-        Doloremque officiis architecto porro laborum, aut, expedita id accusamus beatae soluta eveniet et. Commodi aliquam nulla labore doloribus animi iure velit, enim placeat maxime, incidunt beatae! Ipsum doloribus culpa nemo.
-        Alias repellendus officia ducimus. Vitae omnis, quisquam reiciendis sint illum, repellat corporis dolores voluptatibus voluptatem cumque molestias ipsam unde consequuntur culpa accusamus, rerum magni. Vitae enim consectetur asperiores distinctio corporis?
-        Magni accusamus vel maiores voluptates quasi, quos nesciunt facere error dolorum vitae sint ratione eius. Id, voluptas! Quos cum quasi ipsam, quis, dolorum sint voluptatibus, explicabo et debitis vero ut?
-    </p>
+        <h1>Extensiones para Visual Studio Code</h1>
+        <p>Las extensiones son una de las características más poderosas de VS Code. Permiten agregar funcionalidades, integrar herramientas y personalizar tu entorno de desarrollo. A continuación, te presentamos algunas de las extensiones más útiles.</p>
+
+        <h2>Extensiones para Desarrollo Web</h2>
+        <ul>
+            <li><strong>Live Server:</strong> Permite ver tus cambios en tiempo real en un servidor local. Ideal para desarrollo frontend.</li>
+            <li><strong>Prettier:</strong> Formatea automáticamente tu código según las reglas que configures, asegurando consistencia en el estilo.</li>
+            <li><strong>ESLint:</strong> Herramienta para encontrar y corregir problemas en tu código JavaScript, basada en configuraciones de estilo y calidad.</li>
+        </ul>
+
+        <h2>Extensiones para Productividad</h2>
+        <ul>
+            <li><strong>Bracket Pair Colorizer:</strong> Colorea los pares de corchetes, facilitando la lectura del código.</li>
+            <li><strong>Path Intellisense:</strong> Ofrece autocompletado para rutas de archivos en tu proyecto, agilizando la navegación.</li>
+            <li><strong>Todo Tree:</strong> Muestra una lista de todos los comentarios TODO en tu código, ayudándote a gestionar tareas pendientes.</li>
+        </ul>
+
+        <h2>Extensiones para Desarrollo de Back-end</h2>
+        <ul>
+            <li><strong>Debugger for JavaScript:</strong> Potente depurador para JavaScript y Node.js, facilitando la resolución de errores.</li>
+            <li><strong>Python:</strong> Extensión que proporciona soporte completo para desarrollo en Python, incluyendo depuración y análisis de código.</li>
+            <li><strong>Docker:</strong> Integra herramientas para gestionar y desarrollar aplicaciones en contenedores Docker desde VS Code.</li>
+        </ul>
+
+        <h2>Instalación y Configuración de Extensiones</h2>
+        <p>Para instalar una extensión:</p>
+        <ul>
+            <li>Abre la paleta de comandos (Ctrl+Shift+P) y busca <strong>Extensiones: Buscar extensiones</strong>.</li>
+            <li>Busca el nombre de la extensión que deseas instalar y haz clic en <strong>Instalar</strong>.</li>
+        </ul>
+        <p>Una vez instalada, puedes configurar la extensión a través de la pestaña de extensiones en la barra lateral.</p>
     </div>
 
     <!-- Pie de página -->
