Renombrado Index.html a index.html

--- a/MC22010/index.html
+++ b/MC22010/index.html
@@ -17,7 +17,7 @@
                 <li><a href="./about.html">¿Qué es CSS?</a></li>
                 <li><a href="./syntax.html">Sintaxis y Selectores</a></li>
                 <li><a href="./properties.html">Propiedades y Layout</a></li>
-                <li><a href="./responsive.html">Diseño Responsivo</a></li>
+                <li><a href="./responsive.html">Diseños Responsivos</a></li>
             </ul>
         </nav>
     </header>
